--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CIS</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="container">
+        <div class="half-width">
+            <h1 class = "welcome"><span>W</span>elcome To</h1>
+            <h1 class="CIS"><span>C</span>enter For <span class="teal-color">Immigration</span> Services!</h1>
+            <h3>First Immigration Law Firm in Bangladesh</h3>
+            <p>Center for immigration services is a law firm which helps people about Immigration,work permit,study permit,any kind of law related issues and correction of any kind of national documents.</p>
+           </div>
+           <div class="half-width">
+            <img src="images/CISImg.jfif" alt="">
+           </div>
+    </section>
 </body>
 </html>
