Second Page Added

--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
             <h1 class = "welcome"><span>W</span>elcome To</h1>
             <h1 class="CIS"><span>C</span>enter For <span class="teal-color">Immigration</span> Services!</h1>
             <h3>First Immigration Law Firm in Bangladesh</h3>
-            <p>Center for immigration services is a law firm which helps people about Immigration,work permit,study permit,any kind of law related issues and correction of any kind of national documents.</p>
+            <p>Center for immigration services is a law firm which helps people about Immigration,work permit,study permit,any kind of legal services.</p>
            </div>
            <div class="half-width">
             <img src="images/CISImg.jfif" alt="">
            </div>
     </section>
+        <a href="services.html">Services >></a>
 </body>
 </html>
